[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pfc-archiver-questdb"
version = "0.1.0"
description = "Autonomous PFC cold-archive daemon for QuestDB"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
s3 = ["boto3>=1.26"]

[project.scripts]
pfc-archiver-questdb = "pfc_archiver_questdb:main"

[project.urls]
Homepage = "https://github.com/ImpossibleForge/pfc-archiver-questdb"
