[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfc-archiver-questdb"
version = "0.1.1"
description = "Autonomous PFC cold-archive daemon for QuestDB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "pfc", "jsonl", "compression", "logs", "archiving", "daemon",
    "questdb", "cold-storage", "timeseries", "duckdb", "s3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Logging",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "psycopg2-binary>=2.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
s3  = ["boto3>=1.26"]
all = ["boto3>=1.26"]

[project.scripts]
pfc-archiver-questdb = "pfc_archiver_questdb:main"

[project.urls]
Homepage   = "https://github.com/ImpossibleForge/pfc-archiver-questdb"
Repository = "https://github.com/ImpossibleForge/pfc-archiver-questdb"

[tool.setuptools]
py-modules = ["pfc_archiver_questdb"]
